# freecad-mcp

./: .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FDM_Reference.md  LESSONS.md  MANIFESTO.md  MEMORY_DELTA.md  ProjectMemory_FreeCAD_Agent.md  README.md  README_HF.md  SECURITY.md  SystemPrompt_FreeCAD_Agent_v3.md  TECH_STACK.md  Workflows_Cookbook.md  app.py  claude_desktop_config.json  entrypoint.sh  pyproject.toml  requirements.txt  setup-mcp-dell.ps1
.github/workflows/: audit.yml  ci.yml
addon/FreeCADMCP/: InitGui.py
addon/FreeCADMCP/rpc_server/: commands.py  fem_executor.py  gui_dispatch.py  object_factory.py  parts_library.py  property_mapper.py  rpc_server.py  serialize.py  view_manager.py
docs/: API_REFERENCE.md  CORSAIR_MODELING_WORKFLOW.md  QUICKSTART.md  USER_GUIDE.md
examples/: cantilever_fem.py
examples/langchain/: react.py
memory/: __init__.py  docker-compose.override.yml  ingest.py  retrieve.py  schema.sql
src/freecad_mcp/: freecad_client.py  modeling_tools.py  modeling_tools_advanced.py  prompt_text.py  responses.py  server.py  server_state.py
src/freecad_mcp/assembly_tools/: __init__.py  assembly3_advanced.py  assembly3_manager.py  assembly4_advanced.py  assembly4_manager.py  assembly_common.py  bom_manager.py
src/freecad_mcp/operations/: __init__.py  core.py
src/freecad_mcp/prompts/: __init__.py  assembly_strategy.py  boolean_strategy.py  sketch_strategy.py
src/freecad_mcp/sketch_tools/: __init__.py  attachment_manager.py  boolean_operations.py  contour_builder.py  extrude_manager.py  plane_manager.py  sketch_manager.py  transform_manager.py
static/: app.js  index.html  slicer.js
tests/: __init__.py  run_all_tests.py  test_advanced_features.py  test_advanced_simple.py  test_basic_operations.py  test_boolean_operations.py  test_docs_audit.py  test_memory_module.py  test_parts_library.py  test_remaining_6_functions.py  test_server.py  test_sketch_workflow.py
