[project]
name = "freecad-mcp"
version = "0.1.13"
description = "FreeCAD Model Context Protocol server for AI-assisted 3D CAD modeling"
readme = "README.md"
authors = [
    { name = "neka-nat", email = "nekanat.stock@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["freecad", "mcp", "cad", "3d-modeling", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "mcp[cli]>=1.12.2",
]

[project.urls]
Homepage = "https://github.com/neka-nat/freecad-mcp"
Repository = "https://github.com/neka-nat/freecad-mcp"
Issues = "https://github.com/neka-nat/freecad-mcp/issues"

[project.scripts]
freecad-mcp = "freecad_mcp.server:main"

[tool.hatch.build.targets.sdist]
exclude = ["assets", "results", "examples"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
